visualy balance out key list layout providing informative title

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -300,6 +300,15 @@
         .list-options paper-icon-button {
             vertical-align: top;
         }
+
+        .list-title {
+            margin: 0;
+            background-color: var(--mist-lighter-color);
+            font-size: 0.9em;
+            font-weight: 400;
+            line-height: 40px;
+            text-transform: uppercase;
+        }
         
         .search {
             display: inline-block;
