--- a/app/elements/keys-list-element.html
+++ b/app/elements/keys-list-element.html
@@ -22,7 +22,8 @@
         </style>
         <paper-card heading="Keys">
             <div class="card-content">
-                <div hidden$="[[!hasKeys]]" class="list-options">
+                <div hidden$="[[!hasKeys]]" class="list-options flex-horizontal-with-ratios">
+                    <h2 class="list-title flexchild">[[presentedKeys.length]] Keys</h2>
                     <paper-tooltip for="searchKeyBtn" position="top">Toggle Search</paper-tooltip>
                     <paper-icon-button id="searchKeyBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
                     <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
