--- a/app/elements/register-page-element.html
+++ b/app/elements/register-page-element.html
@@ -13,8 +13,8 @@
             <paper-material>
                 <h2>Register</h2>
                 <div class="form-content">
-                    <paper-input id="name" name="name" type="text" label="Name" required error-message="Please enter your name" value="{{user.name}}"></paper-input>
-                    <paper-input id="email" name="email" type="email" label="Email" required error-message="Please enter a valid email address" value="{{user.email}}"></paper-input>
+                    <paper-input id="name" name="name" type="text" label="Name" required error-message="Please enter your name" value="{{user.name}}" auto-validate></paper-input>
+                    <paper-input id="email" name="email" type="email" label="Email" required error-message="Please enter a valid email address" value="{{user.email}}" auto-validate></paper-input>
                 </div>
                 <div class="bottom-actions">
                     <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
@@ -54,19 +54,22 @@
                     '_fieldsChanged(user.*, sendingData)'
                 ],
                 _fieldsChanged: function(user, sendingData) {
-                    var valid = false;
+                    this.async(function() {
+                        var keys = Object.keys(user.base),
+                            valid = keys.every(function(key) {
+                                var el = this.querySelector('#' + key);
+                                return el.value && !el.invalid;
+                            }, this);
 
-                    if (this.$.email.value && this.$.email.validate() && this.$.name.value && this.$.name.validate()) {
-                        valid = true;
-                    }
-
-                    this.set('formReady', valid && !sendingData);
+                        this.set('formReady', valid && !sendingData);
+                    });
                 },
                 _submitForm: function(e) {
                     var payload = {
                         name: this.user.name,
                         email: this.user.email
                     };
+                    console.log(payload);
 
                     // this.$.registerAjax.body = payload;
                     // this.$.registerAjax.generateRequest();
