--- a/app/elements/details-page-element.html
+++ b/app/elements/details-page-element.html
@@ -7,7 +7,7 @@
         :host {
             display: block;
         }
-        
+
         paper-material {
             display: block;
         }
@@ -15,24 +15,29 @@
         <paper-material class="form">
             <h2>Account Details</h2>
             <div class="grid-row">
-                <paper-input class="xs12 l6" label="What's your first name?" required error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
-                <paper-input class="xs12 l6" label="What's your last name?" required error-message="Please enter your last name" value="{{user.lastName}}"></paper-input>
-                <paper-input class="xs12 l6" label="What's your company's name?" required error-message="Please enter your company's name" value="{{user.companyName}}"></paper-input>
-                <paper-dropdown-menu class="dropdown-block xs12 l6" label="Where is your business located?" horizontal-align="left">
+                <paper-input class="xs12 l6" id="firstName" label="What's your first name?" required error-message="Please enter your first name" value="{{user.firstName}}" auto-validate></paper-input>
+
+                <paper-input class="xs12 l6" id="lastName" label="What's your last name?" required error-message="Please enter your last name" value="{{user.lastName}}" auto-validate></paper-input>
+
+                <paper-input class="xs12 l6" id="companyName" label="What's your company's name?" required error-message="Please enter your company's name" value="{{user.companyName}}" auto-validate></paper-input>
+
+                <paper-dropdown-menu class="dropdown-block xs12 l6" id="country" label="Where is your business located?" horizontal-align="left">
                     <paper-menu attr-for-selected="value" selected="{{user.country}}" class="dropdown-content">
                         <template is="dom-repeat" items="[[countriesOptions]]" as="country">
                             <paper-item value="[[country]]">[[country]]</paper-item>
                         </template>
                     </paper-menu>
                 </paper-dropdown-menu>
-                <paper-dropdown-menu class="dropdown-block xs12 l6" label="How many people work there?" horizontal-align="left">
+
+                <paper-dropdown-menu class="dropdown-block xs12 l6" id="numberOfPeople" label="How many people work there?" horizontal-align="left">
                     <paper-menu attr-for-selected="value" selected="{{user.numberOfPeople}}" class="dropdown-content">
                         <template is="dom-repeat" items="[[numberOfPeopleOptions]]" as="people">
                             <paper-item value="[[people]]">[[people]]</paper-item>
                         </template>
                     </paper-menu>
                 </paper-dropdown-menu>
-                <paper-dropdown-menu class="dropdown-block xs12 l6" label="How many servers do you have?" horizontal-align="left">
+
+                <paper-dropdown-menu class="dropdown-block xs12 l6" id="numberOfServers" label="How many servers do you have?" horizontal-align="left">
                     <paper-menu attr-for-selected="value" selected="{{user.numberOfServers}}" class="dropdown-content">
                         <template is="dom-repeat" items="[[numberOfServersOptions]]" as="servers">
                             <paper-item value="[[servers]]">[[servers]]</paper-item>
@@ -45,7 +50,7 @@
                 </div>
             </div>
         </paper-material>
-        <iron-ajax id="ajax" url="/account" method="POST" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
+        <iron-ajax id="detailsAjax" url="/account" method="POST" on-request="_detailsAjaxRequest" on-response="_detailsAjaxResponse"></iron-ajax>
     </template>
     <script>
     (function() {
@@ -89,14 +94,26 @@
                 },
                 formReady: {
                     type: Boolean,
-                    computed: '_computeFormReady(user.firstName, user.lastName, user.country, user.companyName, user.numberOfPeople, user.numberOfServers, sendingData)'
+                    value: false
                 }
             },
             ready: function() {
 
             },
-            _computeFormReady: function(firstName, lastName, country, companyName, numberOfPeople, numberOfServers) {
-                return firstName && lastName && country && companyName && numberOfPeople && numberOfServers;
+            observers: [
+                '_fieldsChanged(user.*, sendingData)'
+            ],
+            _fieldsChanged: function(user, sendingData) {
+                this.async(function() {
+                    var keys = Object.keys(user.base),
+                        valid = keys.every(function(key) {
+                            var el = this.querySelector('#' + key);
+                            console.log(el.value, el.invalid);
+                            return el.value && !el.invalid;
+                        }, this);
+
+                    this.set('formReady', valid && !sendingData);
+                });
             },
             _submitForm: function(e) {
                 var payload = {
@@ -109,16 +126,17 @@
                     number_of_servers: this.user.numberOfServers,
                     number_of_people: this.user.numberOfPeople
                 };
+                console.log(payload);
 
                 this._fireEvents();
 
                 //   this.$.ajax.body = payload;
                 //   this.$.ajax.generateRequest();
             },
-            _ajaxRequest: function() {
+            _detailsAjaxRequest: function() {
                 this.set('sendingData', true);
             },
-            _ajaxResponse: function() {
+            _detailsAjaxResponse: function() {
                 this.set('sendingData', false);
                 this._fireEvents();
             },
