less visual emphasis on non selectable networks

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -273,6 +273,7 @@
         
         ::content paper-item paper-checkbox[disabled] ~ .name {
             opacity: 0.54;
+            font-weight: 400;
         }
         
         .info-head paper-checkbox >::content #checkbox {
