--- a/app/index.html
+++ b/app/index.html
@@ -434,14 +434,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-icon-button icon="search"></paper-icon-button> -->
 
                         <!-- Application name -->
-                        <div class="middle middle-container">
+                        <!-- <div class="middle middle-container">
                             <div class="app-name">Mist.io UI Playground</div>
-                        </div>
+                        </div> -->
 
                         <!-- Application sub title -->
-                        <div class="bottom bottom-container">
+                        <!-- <div class="bottom bottom-container">
                             <div class="bottom-title">We build Mist.io UI on top of web components using Polymer</div>
-                        </div>
+                        </div> -->
                     </paper-toolbar>
 
                     <!-- Main Content -->
