--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -51,6 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../bower_components/paper-progress/paper-progress.html">
 
 <!-- Neon Elements -->
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
