trying out graphic logo in header

--- a/app/index.html
+++ b/app/index.html
@@ -442,6 +442,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         <!-- <div class="bottom bottom-container">
                             <div class="bottom-title">We build Mist.io UI on top of web components using Polymer</div>
                         </div> -->
+                        <div class="toolbar-logo">
+                            <img src="images/logos/logo-solo.svg" width="300px;" height="300px"/>
+                        </div>
                     </paper-toolbar>
 
                     <!-- Main Content -->
