--- a/app/elements/script-add-element.html
+++ b/app/elements/script-add-element.html
@@ -11,11 +11,17 @@
         paper-card {
             display: block;
         }
+        paper-progress {
+            position: absolute;
+            bottom: 83px;
+            width: 100%;
+            left: 0;
+            right: 0;
+        }
         </style>
         <paper-card heading="Add Script">
             <div class="card-content">
                 <div class="grid-row">
-                    <paper-progress class="xs12" value="10"></paper-progress>
                     <template is="dom-repeat" items="{{fields}}" as="field">
                         <template is="dom-if" if="[[_computeFieldType(field, 'text', field.show)]]">
                             <paper-input class="xs12" id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
@@ -33,8 +39,9 @@
                             </paper-dropdown-menu>
                         </template>
                     </template>
+                    <paper-progress id="progress" value="0" hidden$="[[hideprogress]]"></paper-progress>
                     <hr class="xs12" />
-                    <div class="notifications xs12">
+                    <!-- <div class="notifications xs12">
                         <div class="red">
                             <iron-icon icon="icons:error-outline"></iron-icon> Error message from server
                             <div class="info-code">
@@ -47,9 +54,9 @@
                         <div class="blue">
                             Info message from server
                         </div>
-                    </div>
+                    </div> -->
                     <div class="clearfix bottom-actions xs12">
-                        <paper-button class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
+                        <paper-button id="submit" class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm" onclick="startProgress();">Add</paper-button>
                         <paper-button class="submit-btn pull-right" raised on-tap="_resetForm">Reset</paper-button>
                     </div>
                 </div>
@@ -92,6 +99,10 @@
                 formReady: {
                     type: Boolean,
                     value: false
+                },
+                hideprogress: {
+                    type:Boolean, 
+                    value:true
                 }
             },
             observers: [
@@ -146,6 +157,9 @@
 
                 //   this.$.addScriptAjax.body = payload;
                 //   this.$.addScriptAjax.addRequest();
+
+                //test progress bar
+                this.hideprogress = false;
             },
             _addScriptAjaxRequest: function() {
                 this.set('sendingData', true);
@@ -189,5 +203,38 @@
             }
         });
     })();
+    // test progress bar, code from demo
+    var progress, button, animationFrame;
+    var repeat, maxRepeat = 1,
+        animating = false;
+
+    function nextProgress() {
+        animating = true;
+        if (progress.value < progress.max) {
+            progress.value += (progress.step || 1);
+
+        } else {
+            if (++repeat >= maxRepeat) {
+                animating = false;                
+                button.disabled = false;
+                return;
+            }
+            progress.value = progress.min;
+        }
+        var animationFrame = requestAnimationFrame(nextProgress);
+    }
+
+    function startProgress() {        
+        repeat = 0;
+        progress.value = progress.min;
+        button.disabled = true;
+        if (!animating) {
+            nextProgress();
+        }
+    }
+    window.addEventListener('WebComponentsReady', function() {
+        progress = document.querySelector('paper-progress');
+        button = document.querySelector('paper-button#submit');
+    });
     </script>
 </dom-module>
