--- a/app/elements/cloud-add-element.html
+++ b/app/elements/cloud-add-element.html
@@ -3,6 +3,7 @@
 
 <dom-module id="cloud-add-element">
     <template>
+        <style is="custom-style" include="forms"></style>
         <style include="shared-styles">
             :host {
                 display: block;
@@ -28,19 +29,22 @@
             .dropdown-with-logos paper-item img {
                 margin-right: 16px; 
             }
-            .dropdown-with-logos paper-item img {
-                margin-right: 16px; 
+            .dropdown-with-logos paper-item {
+                text-transform: capitalize;
+                opacity: 0.87;
             }
         </style>
-
+        <h2>Add Cloud</h2>
         <paper-material>
-            <paper-dropdown-menu class="dropdown-block dropdown-with-logos" label="Providers" horizontal-align="left">
-                <paper-menu attr-for-selected="value" selected="{{selectedProvider}}" class="dropdown-content">
-                    <template is="dom-repeat" items="[[providersList]]" as="provider">
-                        <paper-item value="[[provider]]"><img src="[[providerlogosrc(provider)]]" width="24px"/>[[provider]]</paper-item>
-                    </template>
-                </paper-menu>
-            </paper-dropdown-menu>
+            <div class="grid-row">
+                <paper-dropdown-menu class="dropdown-block l6 xs12 dropdown-with-logos" label="Providers" horizontal-align="left">
+                    <paper-menu attr-for-selected="value" selected="{{selectedProvider}}" class="dropdown-content">
+                        <template is="dom-repeat" items="[[providersList]]" as="provider">
+                            <paper-item value="[[provider]]"><img src="[[providerlogosrc(provider)]]" width="24px"/>[[provider]]</paper-item>
+                        </template>
+                    </paper-menu>
+                </paper-dropdown-menu>
+            </div>
 
             <!-- <div hidden$="[[selectedProvider]]">
                 <p>Do you want to reset it?
@@ -49,12 +53,11 @@
             </div> -->
         </paper-material>
 
-        <paper-material>
+        <paper-material hidden$=[[!selectedProvider]]>
             <!-- <div hidden$=[[selectedProvider]]>
                 <p>Select a provider above first!!</p>
             </div> -->
 
-            <div hidden$=[[!selectedProvider]]>
                 <template is="dom-repeat" items="{{providerFields}}" as="field">
                     <template is="dom-if" if="[[_computeFieldType(field, 'text', field.show)]]">
                         <paper-input id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
@@ -82,6 +85,8 @@
                         <paper-toggle-button checked="{{field.value}}">[[field.label]]</paper-toggle-button>
                     </template>
                 </template>
+
+                <hr/>
 
                 <div class="clearfix">
                     <paper-button class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
