add /grid with vaadin grid

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -8,6 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
+<link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
+
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
@@ -134,6 +136,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="policy-page-element.html">
 <link rel="import" href="policy-add-element.html">
 <link rel="import" href="policy-edit-element.html">
+<link rel="import" href="grid-list-element.html">
 
 <!-- Coming from Polymist -->
 <link rel="import" href="app-forms/app-forms.html">
