--- a/app/index.html
+++ b/app/index.html
@@ -325,6 +325,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             <iron-icon icon="done" class="done-icon"></iron-icon>
                         </a>
 
+                        <a data-route="grid" href="/grid">
+                            <iron-icon icon="receipt"></iron-icon>
+                            <span>Grid</span>
+                            <iron-icon icon="done" class="done-icon"></iron-icon>
+                        </a>
+
                         <a data-route="scripts" href="/scripts">
                             <iron-icon icon="receipt"></iron-icon>
                             <span>Scripts List</span>
@@ -509,6 +515,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             <network-page-element data-route="network" id="[[params.id]]"></network-page-element>
 
                             <network-add-element data-route="add-network"></network-add-element>
+
+                            <grid-list-element data-route="grid"></grid-list-element>
 
                             <scripts-list-element data-route="scripts"></scripts-list-element>
 
