--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -117,6 +117,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             app.params = data.params;
         });
 
+        page('/grid', function() {
+            app.route = 'grid';
+        });
+
         page('/scripts', function() {
             app.route = 'scripts';
         });
